# nfl_player_similarity

./: .gitignore  .pre-commit-config.yaml  Fantasy Football Scraping.ipynb  Fantasy_Player_Similarity_Model.ipynb  Fantasy_Player_Similarity_Model_New_Season_Dataset.ipynb  Makefile  README.md  fantasyfootball_similarity.py  pyproject.toml  requirements.txt  setup.py  test_notebook.ipynb
.ipynb_checkpoints/: Fantasy Football Scraping-checkpoint.ipynb  Fantasy_Player_Similarity_Model-checkpoint.ipynb  Fantasy_Player_Similarity_Model_New_Season_Dataset-checkpoint.ipynb
Datasets/: 1994_to_2022_draftclass.csv  season2000_to_2022_data.csv
data/: Season_Stats_2000_22.csv
data/nfl_data_py/: player_bio_2019_2023.csv
data/raw/: 1994_to_2022_draftclass.csv  2013_to_2022_data.csv  draft_test.csv  season2000_to_2022_data.csv  seasonal_data_2019_2023.csv
docs/: API.md  PFR_ID_System.md  UI_Features.md
notebooks/: Fantasy_Player_Similarity_Model_New_Season_Dataset.ipynb  new_scraper.ipynb  test_notebook.ipynb
scraper/: Fantasy Football Scraping.ipynb  new_scraper.ipynb
src/: __init__.py
src/api/: __init__.py  dependencies.py  main.py
src/api/routers/: __init__.py  players.py  similarity.py
src/api/schemas/: __init__.py  player.py  similarity.py
src/app/: __init__.py  main.py
src/data/: __init__.py  loader.py  player_mapping.py
src/db/: __init__.py  database.py  ingest.py  schema.sql
src/models/: __init__.py  projection.py  similarity.py  similarity_v2.py
src/utils/: __init__.py  visualization.py
tests/: __init__.py  test_data_loader.py  test_player_selection.py
web/: index.html  package-lock.json  package.json  tailwind.config.js
web/src/: App.tsx  index.css
web/src/api/: client.ts
web/src/components/: CareerTrajectoryChart.tsx  ComparisonSettings.tsx  Layout.tsx  PlayerHeadshot.tsx  PlayerSearch.tsx  PlayerSeasonTable.tsx  SimilarPlayerCard.tsx  SimilarPlayerCards.tsx  SimilarPlayersList.tsx  StatsComparisonTable.tsx  StatsTable.tsx
web/src/hooks/: usePlayerSearch.ts  useSimilarPlayers.ts
web/src/pages/: HomePage.tsx  MethodologyPage.tsx  PlayerDetailPage.tsx
web/src/types/: index.ts
